# rpg_ultimate_slam_open

./: .gitignore
applications/ze_ceres_backend/src/: imu_error.cpp
applications/ze_vio_ceres/: CMakeLists.txt  package.xml
applications/ze_vio_ceres/cfg/: autopiloto_imu_parameters.conf  dvx_imu_parameters.conf  dvx_parameters.conf  dvx_parameters_study.conf  vio_base.conf  vio_dvx.conf
applications/ze_vio_ceres/launch/: dvx.launch  dvx_events_only.launch  f550_tfs.launch  ijrr17_events_only.launch  live_DVXplorer.launch  tf_static_map_origin_to_odom.launch  tfs_f550.launch
applications/ze_vio_ceres/scripts/: initial_setting.sh  parameters_automatization.sh  tf_static_vicon_origin_to_map_origin.py  tf_static_vicon_origin_to_odom_origin.py  tmux_parameters_automatization.sh  tmux_txt_writing_automatization.sh
applications/ze_vio_ceres/src/: dvs_sensor_2_dvs_sensor_optical_subscriber.cpp  event_msg_length.cpp  odometry_subscriber_c.cpp  txt_writing_odometry_dvxplorer.cpp  txt_writing_parameters.cpp  vicon_path.cpp
applications/ze_vio_frontend/src/: frontend_base.cpp
calibration/: DVXplorer-DXA00253-ir.yaml  DVXplorer-DXA00253-sin-ir.yaml  DVXplorer-DXA00253.yaml  DVXplorer-ir-autopiloto.yaml  DVXplorer.yaml  DVXplorer_ir.yaml  dvx_cam_calib.yaml
calibration/imu/: DVXplorer-imu-200.yaml  DVXplorer-imu-800.yaml  DVXplorer-imu-common-values.yaml  autopiloto-imu-50.yaml  dvx_imu.yaml
calibration/kalibr_targets/: checkboard_9x12.yaml
common/ze_imu/py/ze_imu/: imu_integration.py
common/ze_vio_common/src/: vio_visualizer.cpp
ui/ze_visualization/rviz/: ze.rviz
(+1 files in other folders)
